<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/reg_lbl_registro"
            android:textColor="@color/purple_700"
            android:textSize="25sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <EditText
                android:id="@+id/reg_txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="text"
                android:hint="@string/reg_txt_nombre"
                android:background="@android:color/transparent"
                android:maxLength="50"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/reg_txt_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:layout_margin="10dp"

                android:hint="@string/reg_txt_apellido"
                android:maxLength="50"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_lbl_sexo"
            android:layout_marginLeft="12dp"
            android:textSize="20sp"/>

        <RadioGroup
            android:id="@+id/reg_rb_sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/reg_rb_ND"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/reg_rb_ND"/>

            <RadioButton
                android:id="@+id/reg_rb_M"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/reg_rb_masculino" />

            <RadioButton
                android:id="@+id/reg_rb_F"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/reg_rb_femenino"/>

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/reg_txt_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textEmailAddress"
                android:background="@android:color/transparent"
                android:maxLength="50"
                android:hint="@string/reg_txt_correo"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/reg_txt_clave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/reg_txt_clave"
                android:inputType="textPassword"
                android:maxLength="40"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/reg_txt_clave_confirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_txt_clave_confirmar"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:maxLength="40"/>
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/reg_chk_terminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:text="@string/reg_chk_terminos"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <Button
                android:id="@+id/reg_btn_registrar"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/reg_btn_registrar"
                    android:backgroundTint="@android:color/holo_blue_light"
                android:textAllCaps="false"/>

                <Button
                android:id="@+id/reg_btn_cancelar"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/reg_btn_cancelar"
                    android:backgroundTint="@android:color/holo_blue_light"
                android:textAllCaps="false"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>