<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:layout_margin="20dp"
            android:gravity="center"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="false">
            <EditText
                android:id="@+id/log_txt_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/log_txt_correo"
                android:inputType="textEmailAddress"
                android:maxLength="50"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/log_txt_clave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/log_txt_clave"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:maxLength="25"
                android:minHeight="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/log_chk_recordar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/log_chk_recordar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/log_btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/log_btn_ingresar"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/log_btn_salir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/log_btn_salir"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/log_lbl_registrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/log_lbl_registrate"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>