<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.AgregarRecetaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/frg_agregarRece_lbl_titulo"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/frg_agregarRece_txt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="text"
                android:maxLength="30"
                android:background="@android:color/transparent"
                android:hint="@string/frg_agregarRece_txt_nombre"
                android:textSize="15sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/frg_agregarRece_txt_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="text"
                android:maxLength="300"
                android:background="@android:color/transparent"
                android:hint="@string/frg_agregarRece_txt_descripcion"
                android:textSize="15sp"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/frg_agregarRece_txt_ingredientes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:hint="@string/frg_agregarRece_txt_ingredientes"
                android:background="@android:color/transparent"
                android:inputType="textMultiLine"

                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/frg_agregarRece_txt_preparacion"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/frg_agregarRece_txt_preparacion"
                android:inputType="textMultiLine"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/agr_iv_foto_receta"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@mipmap/ic_launcher">
                </ImageView>
                <Button
                    android:layout_gravity="center"
                    android:id="@+id/frg_agregarRece_btn_subirimg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:text="@string/frg_agregarRece_btn_subirimg">
                </Button>
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/frg_agregarRece_btn_agregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/frg_agregarRece_btn_agregar"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/frg_agregarRece_btn_cancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/frg_agregarRece_btn_cancelar"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>