<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_editar_receta_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.EditarRecetaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/edi_iv_foto_receta"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@mipmap/ic_launcher" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/frg_editRece_txt_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/frg_editRece_txt_nombre"
                    android:inputType="text"
                    android:maxLength="30"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/frg_editRece_txt_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/frg_editRece_txt_descripcion"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/frg_editRece_txt_ingredientes"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/frg_editRece_txt_ingredientes"
                    android:inputType="textMultiLine"

                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/frg_editRece_txt_preparacion"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/frg_editRece_txt_preparacion"
                    android:inputType="textMultiLine"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/frg_edi_btn_actualizar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/frg_edi_btn_actualizar"
                    android:textAllCaps="false"
                    android:textSize="20sp"></Button>

                <Button
                    android:id="@+id/frg_edi_btn_eliminar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/frg_edi_btn_eliminar"
                    android:textAllCaps="false"
                    android:textSize="20sp"></Button>
            </LinearLayout>

            <Button
                android:id="@+id/frg_edi_btn_regresar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/frg_edi_btn_regresar"
                android:textAllCaps="false"
                android:textSize="20sp"></Button>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>